On place les élements qui vont 2 par 2

--- a/squelettes/_form.scss
+++ b/squelettes/_form.scss
@@ -278,4 +278,14 @@ td.admin {
         clear: none;
         margin-left: 10px;
     }
+    
+    .editer_age_min,
+    .editer_age_max,
+    .editer_accueil_handicap,
+    .editer_accessibilite_handicap {
+        width: 290px;
+        margin-right: 10px;
+        clear: none;
+        float: left;
+    }
 }
