--- a/squelettes/_form.scss
+++ b/squelettes/_form.scss
@@ -285,6 +285,19 @@ td.admin {
     .editer_accessibilite_handicap {
         width: 290px;
         margin-right: 10px;
+        margin-top: 20px;
+        clear: none;
+        float: left;
+    }
+    .saisie_checkbox label {
+        font-size: 1.1em;
+    }
+    .editer_logement,
+    .editer_garderie,
+    .editer_repas_chaud {
+        margin-top: 20px;
+        width: 180px;
+        margin-right: 10px;
         clear: none;
         float: left;
     }
