On prépare les fichiers CSS pour fix les idioties d'internet Explorer

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -718,3 +718,6 @@ body .spip-admin-bloc, body .spip-admin-float {
     right: auto;
     left: 205px;
 }
+
+// Fix pour internet Explorer
+@import "ie-fix";
