Place Orbit et le customiser pour badje

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -721,3 +721,6 @@ body .spip-admin-bloc, body .spip-admin-float {
 
 // Fix pour internet Explorer
 @import "ie-fix";
+
+// Orbit badje
+@import "orbit";
