--- a/squelettes/_ie-fix.scss
+++ b/squelettes/_ie-fix.scss
@@ -1,1 +1,31 @@
-// Internet Explorer 8
+// Internet Explorer 7 et 8
+.lt-ie9 {
+    .columns {
+        padding: 0;
+        margin: 0;
+    }
+    .orbit-container {
+        padding: 0;
+        margin: 0;
+        .orbit-slides-container {
+            padding: 0;
+            margin: 0;
+            ul, li {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+            }
+        }
+    }
+}
+
+.lt-ie8 {
+    .orbit-container .orbit-slides-container > * .orbit-caption {
+        padding-top: 0;
+        padding-bottom: 0;
+        
+        h3 {
+            padding-top: 10px;
+        }
+    }
+}
