--- a/squelettes/_form.scss
+++ b/squelettes/_form.scss
@@ -11,7 +11,8 @@ label {
         display: block;
         background: #FFF;
         padding: 20px;
-        margin-bottom: 20px;
+        padding-bottom: 0;
+        margin-bottom: 0px;
         border-bottom: 2px solid #d7ccbf;
     }
     ul { 
@@ -75,6 +76,7 @@ label {
         display: block;
         background: #FFF;
         padding: 20px;
+        padding-bottom: 0;
         border-bottom: 2px solid #d7ccbf;
         margin: 0;
         margin-bottom: 20px;
@@ -166,7 +168,6 @@ label {
             display: block;
             clear: none;
             width: 50%;
-            height: 136px;
             float: left;
             
             input.submit {
