Fix pour IE7 de la partie activité.

--- a/squelettes/_ie-fix.scss
+++ b/squelettes/_ie-fix.scss
@@ -36,4 +36,16 @@
             padding-top: 10px;
         }
     }
+    .formulaire_spip {
+        // On adapte la mise en page de la partie "type d'activité" sous IE7.
+        li.fieldset_activite {
+            ul {
+                height: 200px;
+                li.editer_creative {
+                    margin-top: 0px;
+                }
+            }
+            
+        }
+    }
 }
