--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -340,7 +340,10 @@ img, object, embed {
                     font-weight: bold;
                     font-size: pem(16);
                     color: #FFF;
+                    
                     padding-left: 28px;
+                    padding-right: 56px;
+                    
                     position: relative;
                     
                     span {
@@ -566,9 +569,11 @@ img, object, embed {
                 color: #FFF;
                 
                 width: 360px;
-                height: 30px;
+                min-height: 30px;
+                height: auto;
                 
                 padding-left: 20px;
+                padding-right: 56px;
                 text-transform: none;
                 
                 span {
