Positionner les pictogrammes

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -656,6 +656,13 @@ img, object, embed {
                             margin-bottom: 15px;
                         }
                     }
+
+                    ul.pictogramme {
+                        li {
+                            display: inline;
+                            margin-right: 10px;
+                        }
+                    }
                 }
             }
 
