--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -11,6 +11,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: normal;
     margin:0;
     text-transform: uppercase;
+    font-family: Helvetica;
 }
 
 body {
