--- a/squelettes/_form.scss
+++ b/squelettes/_form.scss
@@ -197,9 +197,10 @@ label {
                 display: block;
                 border: none;
                 background: url(images/bouton_recherche_bas.png) no-repeat 0 0;
-                width: 302px;
-                height: 136px;
-                margin-top: -30px;
+                width: 303px;
+                height: 103px;
+                margin-top: -10px;
+                margin-left: 15px;
             }
         }
     }
