On ajoute le bouton Facebook

--- a/squelettes/perso.scss
+++ b/squelettes/perso.scss
@@ -182,7 +182,8 @@ img, object, embed {
         .facebook {
             position: absolute;
             top: 20px;
-            right: -35px;
+            right: -115px;
+            width: auto;
         }
     }
 
