Réduire la taille de la typo des tooltips

--- a/squelettes/_tooltips.scss
+++ b/squelettes/_tooltips.scss
@@ -2,7 +2,7 @@
     background: #ce0058;
     -webkit-border-radius: 0;
             border-radius: 0;
-    
+    font-size: 0.8em;
     width: 400px;
     height: auto;
     
